// Receiver interface

syntax = "proto3";

package receiver;

option go_package = "github.com/rkojedzinszky/thermo-center/receiver";

import "configurator/api.proto";

service Receiver {
	// Request to handle a sensor configuration task
	rpc HandleTask(configurator.Task) returns (HandleResponse) {}
}

message HandleResponse {
	bool success = 1;
}
